# file(GLOB KERNEL_SOURCES *.cu)
# cuda_add_library(Kernel ${KERNEL_SOURCES})

add_library(Raw10ToRaw8 STATIC Raw10ToRaw8.cu)
set_property(TARGET Raw10ToRaw8 PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
set_property(TARGET Raw10ToRaw8 PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET Raw10ToRaw8 PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)


add_library(AWB STATIC AWB.cu)
set_property(TARGET AWB PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
set_property(TARGET AWB PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET AWB PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)

add_library(CCM STATIC CCMcuda.cu)
set_property(TARGET CCM PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
set_property(TARGET CCM PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET CCM PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
